Sidebar: Fixed letter spacing!

--- a/ecowiki/client/scss/components/sidebar.scss
+++ b/ecowiki/client/scss/components/sidebar.scss
@@ -21,7 +21,7 @@
 			padding: 0 23px;
 			color: $sidebar-color-text-prim;
 			font-size: 11px;
-			letter-spacing: 4px;
+			letter-spacing: 2px;
 			text-transform: uppercase;
 			background-color: $sidebar-color-bg;
 			margin: 0 10px 15px 0;
